# hoopstat-haus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .repomixignore  CONTRIBUTING.md  E2E_UPDATE_PLAN.md  IMPLEMENTATION_SUMMARY.md  MCP_SETUP.md  PROJECT_STATUS_RECAP.md  README.md  SECURITY.md  SOLUTION_SUMMARY.md  TEST_FIX_SUMMARY.md  docker-compose.test.yml  docs-requirements.txt  mkdocs.yml  repomix.config.json  todo.md  validate_e2e_framework.py
apps/: README.md
apps/bronze-ingestion/: BRONZE_SUMMARY.md  DOCKERFILE_FIX_VALIDATION.md  Dockerfile  README.md  VALIDATION_GUIDE.md  demo_bronze_summary.py  pyproject.toml  requirements.txt  setup-local.sh  validate_bronze_layer.py
apps/bronze-ingestion/app/: __init__.py  bronze_summary.py  config.py  ingester.py  ingestion.py  lambda_handler.py  main.py  nba_client.py  quarantine.py  quarantine_cli.py  replay.py  s3_client.py  s3_manager.py  schemas.py  transforms.py  validation.py
apps/bronze-ingestion/tests/: __init__.py  test_bronze_layer_validation.py  test_bronze_summary.py  test_bronze_summary_integration.py  test_config.py  test_error_classification.py  test_ingester.py  test_ingestion.py  test_lambda_handler.py  test_main.py  test_mock_data_integration.py  test_nba_client.py  test_performance.py  test_quarantine.py  test_quarantine_cli.py  test_replay.py  test_s3_client.py  test_s3_manager.py  test_transforms.py  test_validation.py
apps/db-compiler/: Dockerfile  README.md  pyproject.toml
apps/db-compiler/app/: __init__.py  compiler.py  duckdb_writer.py  fetcher.py  main.py  sqlite_writer.py  validator.py
apps/db-compiler/schema/: duckdb_schema.sql  index_rationale.md  schema_common.md  sqlite_schema.sql
apps/db-compiler/tests/: __init__.py  conftest.py  test_compiler.py  test_duckdb_writer.py  test_fetcher.py  test_sqlite_writer.py  test_validator.py
apps/example-calculator-app/: Dockerfile  README.md  README_old.md  pyproject.toml
apps/example-calculator-app/app/: main.py  performance.py  scripts.py
apps/example-calculator-app/tests/: test_main.py
apps/mcp-local-proxy/: Dockerfile  README.md  pyproject.toml
apps/mcp-local-proxy/app/: __init__.py  cli.py  http_client.py  main.py  server.py
apps/mcp-local-proxy/tests/: test_cli.py  test_http_client.py  test_server.py
apps/mcp-server/: .gitignore  ACCEPTANCE_CRITERIA_VALIDATION.md  README.md  demo.py  pyproject.toml
apps/mcp-server/mcp_server/: __init__.py  main.py  scripts.py  server.py
apps/mcp-server/tests/: test_integration.py  test_server.py
apps/nba-season-backfill/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/nba-season-backfill/app/: __init__.py  backfill_runner.py  config.py  main.py  nba_client.py  s3_client.py  scripts.py  state_manager.py  storage_client.py
apps/nba-season-backfill/tests/: test_config.py  test_integration.py  test_nba_client.py  test_state_manager.py
apps/player-daily-aggregator/: .gitignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION.md  README.md  integration_test.py  manual_test.py  pyproject.toml
apps/player-daily-aggregator/app/: __init__.py  aggregator.py  config.py  handler.py  s3_utils.py  scripts.py  validation.py
apps/player-daily-aggregator/player_daily_aggregator/: __init__.py  aggregations.py  lambda_handler.py  s3_utils.py
apps/player-daily-aggregator/tests/: __init__.py  test_aggregations.py  test_aggregator.py  test_config.py  test_handler.py  test_lambda_handler.py  test_s3_utils.py  test_validation.py
apps/silver-processing/: DEPLOYMENT_TESTING.md  Dockerfile  README.md  pyproject.toml
apps/silver-processing/app/: __init__.py  handlers.py  lambda_handler.py  main.py  processors.py
apps/silver-processing/tests/: __init__.py  test_bronze_to_silver_processor.py  test_handlers.py  test_lambda_deployment.py  test_main.py  test_nba_api_mapping.py  test_processors.py  test_sqs_events.py
apps/test-app/: .env.example  .pre-commit-config.yaml  Makefile  pyproject.toml
apps/test-app/app/: config.py  main.py
apps/test-app/tests/: test_config.py  test_main.py
libs/example-math-utils/: README.md  pyproject.toml
libs/example-math-utils/example_math_utils/: __init__.py  calculator.py
libs/example-math-utils/tests/: test_calculator.py
libs/hoopstat-common/: README.md  pyproject.toml
libs/hoopstat-common/hoopstat_common/: __init__.py  performance.py
libs/hoopstat-common/tests/: test_performance.py
libs/hoopstat-config/: README.md  demo.py  pyproject.toml
libs/hoopstat-config/hoopstat_config/: __init__.py  config_field.py  config_manager.py  exceptions.py  loaders.py
libs/hoopstat-config/tests/: __init__.py  test_config_field.py  test_config_manager.py  test_loaders.py
libs/hoopstat-e2e-testing/: README.md  pyproject.toml
libs/hoopstat-e2e-testing/hoopstat_e2e_testing/: __init__.py  localstack_manager.py  pipeline_runner.py  s3_utils.py
libs/hoopstat-e2e-testing/tests/: test_pipeline_runner.py  test_s3_utils.py
libs/hoopstat-mock-data/: README.md  custom_dataset.json  parquet_data.parquet  pyproject.toml  simple_data.json  small_dataset.json
libs/hoopstat-mock-data/custom_data/: games.parquet  player_stats.parquet  players.parquet  team_stats.parquet  teams.parquet
libs/hoopstat-mock-data/hoopstat_mock_data/: __init__.py  cli.py  models.py
libs/hoopstat-mock-data/tests/: test_exporters.py  test_mock_data_generator.py  test_players.py  test_teams.py
libs/hoopstat-s3/: README.md  demo.py  pyproject.toml
libs/hoopstat-s3/hoopstat_s3/: __init__.py  s3_uploader.py  silver_s3_manager.py
libs/hoopstat-s3/tests/: __init__.py  test_parquet_converter.py  test_s3_uploader.py  test_silver_s3_manager.py
libs/ingestion/: README.md  demo.py  pyproject.toml
libs/ingestion/nba-api/: .gitignore  pyproject.toml
libs/ingestion/tests/: test_nba_client.py  test_parquet_converter.py  test_rate_limiter.py  test_s3_uploader.py
templates/python-app-template/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
templates/python-app-template/app/: aws_config.py  config.py  main.py
templates/python-lib-template/: README.md  pyproject.toml
(+518 files in other folders)
