[tool.poetry]
name = "db-compiler"
version = "0.1.0"
description = "Compiles Gold JSON artifacts into DuckDB and SQLite database files"
authors = ["Hoopstat Haus Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.5.2"
click = "^8.3.2"
boto3 = "^1.42.89"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.15.10"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
moto = {extras = ["s3"], version = "^5.0.0"}

[tool.poetry.scripts]
compile = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
