[tool.poetry]
name = "hoopstat-mcp-server"
version = "0.1.0"
description = "MCP server for exposing Gold layer basketball data to AI agents"
authors = ["Hoopstat Haus Team"]
readme = "README.md"
packages = [{include = "mcp_server"}]

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.6.0"
# Local dependencies for configuration and data access
hoopstat-config = {path = "../../libs/hoopstat-config", develop = true}
hoopstat-data = {path = "../../libs/hoopstat-data", develop = true}
hoopstat-observability = {path = "../../libs/hoopstat-observability", develop = true}
# AWS and data processing dependencies
boto3 = "^1.35.0"
pandas = "^2.2.0"
pyarrow = "^21.0.0"
# HTTP and async support
pydantic = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
ruff = "^0.12.4"
black = "^25.1.0"
moto = "^5.0.0"  # For mocking AWS services

[tool.poetry.scripts]
mcp-server = "mcp_server.main:main"
dev = "mcp_server.scripts:dev"
test = "mcp_server.scripts:test"
lint = "mcp_server.scripts:lint"
format = "mcp_server.scripts:format_code"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# Black configuration
[tool.black]
target-version = ["py312"]
line-length = 88

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mcp_server"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]