[tool.poetry]
name = "player-daily-aggregator"
version = "0.1.0"
description = "AWS Lambda function for aggregating player daily statistics from Silver to Gold layer"
authors = ["Hoopstat Haus Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.0"
pandas = "^2.0.0"
pyarrow = "^18.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.4"
black = "^25.1.0"
pytest-cov = "^6.2.1"
moto = "^5.0.0"

[tool.poetry.scripts]
test = "app.scripts:test"
lint = "app.scripts:lint"
format = "app.scripts:format_code"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# Black configuration
[tool.black]
target-version = ["py312"]
line-length = 88

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]