[tool.poetry]
name = "silver-processing"
version = "0.1.0"
description = "Silver layer processing pipeline for NBA statistics"
authors = ["Hoopstat Haus Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.3.1"
jsonschema = "^4.26.0"
hoopstat-observability = {path = "../../libs/hoopstat-observability", develop = false}
hoopstat-data = {path = "../../libs/hoopstat-data", develop = false}
hoopstat-config = {path = "../../libs/hoopstat-config", develop = false}
hoopstat-s3 = {path = "../../libs/hoopstat-s3", develop = false}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.13"
black = "^26.1.0"
pytest-cov = "^7.0.0"
moto = "^5.1.20"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# Black configuration
[tool.black]
target-version = ["py312"]
line-length = 88

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]