[tool.poetry]
name = "hoopstat-mock-data"
version = "0.1.0"
description = "Mock NBA data generation framework for testing Hoopstat Haus data pipelines"
authors = ["Hoopstat Haus Team"]
readme = "README.md"
packages = [{include = "hoopstat_mock_data"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
click = "^8.0.0"
pandas = "^2.0.0"
pyarrow = "^16.0.0"
faker = "^33.1.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.3"
black = "^25.1.0"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
hoopstat-mock-data = "hoopstat_mock_data.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# Black configuration
[tool.black]
target-version = ["py312"]
line-length = 88

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"

[tool.coverage.run]
source = ["hoopstat_mock_data"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]