[tool.poetry]
name = "python-app-template"
version = "0.1.0"
description = "A template Python application for Hoopstat Haus projects"
authors = ["Hoopstat Haus Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.3"
black = "^25.1.0"
pytest-cov = "^6.2.1"
poethepoetry = "^0.29.0"
pre-commit = "^4.0.1"
bandit = "^1.7.9"
safety = "^3.2.11"

[tool.poetry.scripts]
start = "app.main:main"

[tool.poe.tasks]
test = "pytest --cov=app --cov-report=term-missing"
lint = "ruff check ."
format = "black ."
format-check = "black --check ."
format-diff = "black --diff ."
type-check = "echo 'Type checking not configured yet'"
security-deps = "safety check --json"
security-code = "bandit -r app/ -f json"
security = ["security-deps", "security-code"]
pre-commit = ["format", "lint", "test"]
setup-dev = ["_setup-pre-commit"]
_setup-pre-commit = "pre-commit install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.mccabe]
max-complexity = 10

# Black configuration
[tool.black]
target-version = ["py312"]
line-length = 88

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

